--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,3 +36,4 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/user, roles: ROLE_USER }
+        - { path: ^/outing, roles: ROLE_USER }
